--- a/skate.html
+++ b/skate.html
@@ -272,7 +272,7 @@
 
     .cs-footer{
       margin-top: 20px;
-      padding: 18px 20px 22px 0;
+      padding: 18px 20px 22px;
       border-top: 1px solid rgba(255,255,255,.14);
       background: linear-gradient(180deg, rgba(0,0,0,.1), rgba(0,0,0,.35));
     }
@@ -310,7 +310,7 @@
       text-align: left;
       align-self: flex-start;
       margin-left: 0;
-      padding-left: 25px;
+      padding-left: 0;
     }
     .cs-footer-block{
       display: flex;
