--- a/skate.html
+++ b/skate.html
@@ -281,7 +281,7 @@
     }
     .cs-footer-grid{
       display:grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
+      grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 16px;
       align-items: start;
     }
@@ -338,7 +338,7 @@
     .cs-footer-policy{
       display: grid;
       gap: 4px;
-      text-align: center;
+      text-align: left;
     }
     .cs-rental-note{
       font-size: 12px;
@@ -692,10 +692,6 @@
 
     <footer class="cs-footer">
       <div class="cs-footer-grid">
-        <div class="cs-footer-brand">
-          <img class="cs-footer-logo" src="https://img1.wsimg.com/isteam/ip/2b40de6f-a0c5-4cd7-bdc8-abb086d88aa0/CastleLogo.png/:/rs=h:175,m" alt="Castle Skateland">
-          <p>Castle Skateland in Loveland, Ohio.</p>
-        </div>
         <div class="cs-footer-policy">
           <span class="cs-eyebrow">House Rules</span>
           <p>All persons 4 years of age and older must pay admission to enter.</p>
